kotlin coroutine test init